--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -9,8 +9,14 @@
   
   <body>
     <h2>{{ session.user }} you are logged in.</h2>
-    <h1>Pull Day Observation Template</h1>
-		<form action="/pull_day" method = "POST">
+    <h1>Pull Day Observation Template (yaml)</h1>
+		<form action="/pull_day_yaml" method = "POST">
+				<p>Team <input type = "text" name = "team" /></p>
+				<p>Day <input type = "text" name = "day" /></p>
+				<p><input type = "submit" value = "submit" /></p>
+		</form>
+    <h1>Pull Day Observation Template (excel)</h1>
+		<form action="/pull_day_excel" method = "POST">
 				<p>Team <input type = "text" name = "team" /></p>
 				<p>Day <input type = "text" name = "day" /></p>
 				<p><input type = "submit" value = "submit" /></p>
