--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -11,7 +11,7 @@
     <h1>Login</h1>
 		<form action="/login" method = "POST">
 				<p>Username <input type = "text" name = "user" /></p>
-				<p>Password <input type = "text" name = "password" /></p>
+				<p>Password <input type = "password" name = "password" /></p>
 				<p><input type = "submit" value = "submit" /></p>
 		</form>
   </body> 
