adds switch variable for production or test matt server and starts browser app development

--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -14,5 +14,11 @@
 				<p>Password <input type = "password" name = "password" /></p>
 				<p><input type = "submit" value = "submit" /></p>
 		</form>
+    <script>
+      document.addEventListener('DOMContentLoaded', function (){
+              fetch('/test', {method:'POST', headers: {'Content-Type': 'application/json'}, body:JSON.stringify({ "name": "Sean" })}).then((data) => 
+                      { console.log(data) });
+            }, false);
+    </script>
   </body> 
 </html>
