--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -11,14 +11,15 @@
     <h1>Login</h1>
 		<form action="/login" method = "POST">
 				<p>Username <input type = "text" name = "user" /></p>
+				<p>Team <input type = "text" name = "team_number" /></p>
 				<p>Password <input type = "password" name = "password" /></p>
 				<p><input type = "submit" value = "submit" /></p>
 		</form>
-    <script>
+<!--    <script>
       document.addEventListener('DOMContentLoaded', function (){
               fetch('/test', {method:'POST', headers: {'Content-Type': 'application/json'}, body:JSON.stringify({ "name": "Sean" })}).then((data) => 
                       { console.log(data) });
             }, false);
-    </script>
+</script>-->
   </body> 
 </html>
