--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -9,20 +9,20 @@
   
   <body>
     <h2>{{ session.user }} you are logged in.</h2>
-<!--    <h1>Pull Day Observation Template (yaml)</h1>
+    <h1>Pull Day Observation Template (yaml)</h1>
 		<form action="/pull_day_yaml" method = "POST">
 				<p>Day <input type = "text" name = "day" /></p>
 				<p><input type = "submit" value = "submit" /></p>
-</form>-->
+    </form>
     <h1>Pull Day Observation Template (excel)</h1>
 		<form action="/pull_day_excel" method = "POST">
 				<p>Day <input type = "text" name = "day" /></p>
 				<p><input type = "submit" value = "submit" /></p>
 		</form>
-<!--    <h1>Send the loaded observations</h1>
+    <h1>Send the loaded observations</h1>
 		<form action="/update_msel" method = "POST" enctype="multipart/form-data">
 				<p><input type = "file" name = "file" /></p>
 				<p><input type = "submit" value = "submit" /></p>
-    </form>-->
+    </form>
   </body> 
 </html>
