--- a/app/templates/observation_results.html
+++ b/app/templates/observation_results.html
@@ -1,3 +1,6 @@
+<form action="/" method = "GET" enctype="multipart/form-data">
+    <p><input type = "submit" value = "Return to Main Page" /></p>
+</form>
 {% for value in matt_responses %}
 <p>{{value}}</p>
 {% endfor %}
